--- a/com.senatov.smapper.repo/pom.xml
+++ b/com.senatov.smapper.repo/pom.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
-Copyright (c) 2010, 2011 SAP AG and others.
-All rights reserved. This program and the accompanying materials
-are made available under the terms of the Eclipse Public License v1.0
-which accompanies this distribution, and is available at
-http://www.eclipse.org/legal/epl-v10.html
-
-Contributors:
-    SAP AG - initial API and implementation
--->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>eclipse-repository</artifactId>
+	<artifactId>smapper.repo</artifactId>
 	<packaging>eclipse-repository</packaging>
 	<name>RCP Example Product</name>
-
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
 		<artifactId>parent_smapper</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.11-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-
 
 	<build>
 		<plugins>
@@ -37,15 +25,14 @@ Contributors:
 						<linux>tar.gz</linux>
 						<macosx>tar.gz</macosx>
 					</formats>
-           <products>
-              <product>
-                <id>example.product.id</id>
-                <rootFolders>
-                  <!-- for MacOSX, make sure you use a folder ending with .app , see bug 463670 -->
-                  <macosx>Eclipse.app</macosx>
-                </rootFolders>
-              </product>
-            </products>
+					<products>
+						<product>
+							<id>com.senatov.smapper.id</id>
+							<rootFolders>
+								<macosx>Eclipse.app</macosx>
+							</rootFolders>
+						</product>
+					</products>
 				</configuration>
 				<executions>
 					<execution>
