--- a/com.senatov.smapper.plugin/build.properties
+++ b/com.senatov.smapper.plugin/build.properties
@@ -9,4 +9,5 @@ source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
            src/main/resources
+additional.bundles = org.eclipse.ui.trace
            
