--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
->
-	<modelVersion>4.0.0</modelVersion>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
 
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.11-SNAPSHOT</version>
 	<groupId>com.senatov.smapper</groupId>
 	<artifactId>parent_smapper</artifactId>
 	<packaging>pom</packaging>
@@ -60,11 +57,11 @@
 		</plugins>
 	</build>
 	<modules>
-		<module>com.senatov.smapper.RCPplatform</module>
-		<module>com.senatov.smapper.eclipse-repository</module>
-		<module>com.senatov.smapper.feature1</module>
 		<module>com.senatov.smapper.plugin</module>
+		<module>com.senatov.smapper.feature1</module>
+		<module>com.senatov.smapper.RCPplatform</module>
 		<module>com.senatov.smapper.root-files</module>
 		<module>com.senatov.smapper.root-files-win</module>
+		<module>com.senatov.smapper.repo</module>
 	</modules>
 </project>
