--- a/com.senatov.smapper.rcp_target/pom.xml
+++ b/com.senatov.smapper.rcp_target/pom.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
+	<artifactId>rcp_target</artifactId>
 	<packaging>eclipse-target-definition</packaging>
 	<name>RCP Target Definition</name>
 
@@ -13,5 +15,4 @@
 		<relativePath>..</relativePath>
 	</parent>
 
-	<artifactId>rcp_target</artifactId>
 </project>
