--- a/com.senatov.smapper.plugin/build.properties
+++ b/com.senatov.smapper.plugin/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css
+               css/default.css,\
+               images/
 source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
