--- a/com.senatov.smapper.plugin/plugin.xml
+++ b/com.senatov.smapper.plugin/plugin.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
-
    <extension
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            name="com.senatov.smapperApp"
+            name="smapper"
             application="org.eclipse.e4.ui.workbench.swt.E4Application">
          <property
                name="clearPersistedState"
@@ -13,15 +12,23 @@
          </property>
          <property
                name="applicationCSS"
-               value="platform:/plugin/com.senatov.bundle/default.css">
+               value="/com.senatov.smapper.plugins/com.senatov.smapper.smapperApp/css/default.css">
          </property>
          <property
                name="appName"
-               value="sMapper (c)">
+               value="smapper">
          </property>
          <property
                name="windowImages"
-               value="icons/16x16.gif,icons/32x32.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
+               value="/com.senatov.smapper.smapperApp/icons/16x16.gif,/com.senatov.smapper.smapperApp/icons/32x32.gif,/com.senatov.smapper.smapperApp/icons/48x48.gif,/com.senatov.smapper.smapperApp/icons/64x64.gif,/com.senatov.smapper.smapperApp/icons/128x128.gif,/com.senatov.smapper.smapperApp/icons/256x256.gif">
+         </property>
+         <property
+               name="aboutImage"
+               value="/com.senatov.smapper.smapperApp/icons/256x256.gif">
+         </property>
+         <property
+               name="aboutText"
+               value="Universal Mapper">
          </property>
       </product>
    </extension>
@@ -63,15 +70,14 @@
       </view>
    </extension>
    <extension
-         point="org.eclipse.ui.perspectiveExtensions">
-      <perspectiveExtension
-            targetID="org.eclipse.ui.resourcePerspective">
-         <view
-               id="com.example.test"
-               ratio="0.5"
-               relationship="stack"
-               relative="org.eclipse.ui.navigator.ProjectExplorer">
-         </view>
-      </perspectiveExtension>
+         point="org.eclipse.ui.splashHandlers">
+      <splashHandler
+            class="com.senatov.smapper.splashHandlers.BrowserSplashHandler"
+            id="com.senatov.smapper.splashHandlers.browser">
+      </splashHandler>
+      <splashHandlerProductBinding
+            productId="com.senatov.smapper.product"
+            splashId="com.senatov.smapper.splashHandlers.browser">
+      </splashHandlerProductBinding>
    </extension>
 </plugin>
