next development changes

--- a/com.senatov.smapper.feature/feature.properties
+++ b/com.senatov.smapper.feature/feature.properties
@@ -8,11 +8,11 @@
 # Contributors:
 #     SAP AG - initial API and implementation
 ###############################################################################
-featureName=Example Feature
-providerName=Eclipse.org
+featureName=Smapper Feature
+providerName=Senatov
 
 # description property - text of the "Feature Descrption"
-description=Tycho Example Feature
+description=nil
 ################ end of description property ##################################
 
 # "copyright" property - text of the "Feature Update Copyright"
