--- a/com.senatov.smapper.plugin/build.properties
+++ b/com.senatov.smapper.plugin/build.properties
@@ -5,10 +5,10 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                icons/,\
                css/default.css,\
-               images/
+               images/,\
+               lib/,\
+               splash.bmp
 source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
            src/main/resources
-           
-           
