--- a/com.senatov.smapper.plugin/pom.xml
+++ b/com.senatov.smapper.plugin/pom.xml
@@ -13,6 +13,18 @@
 		<version>1.0.11-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
+	<dependencies>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -31,9 +43,7 @@
 										<artifactId>
 											tycho-packaging-plugin
 										</artifactId>
-										<versionRange>
-											[0.23.1,)
-										</versionRange>
+										<versionRange>[0.23.1,)</versionRange>
 										<goals>
 											<goal>
 												validate-version
@@ -41,7 +51,7 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<ignore></ignore>
+										<ignore />
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
