--- a/mars_taget_platform/pom.xml
+++ b/mars_taget_platform/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-
-	<artifactId>feature1</artifactId>
-	<packaging>eclipse-feature</packaging>
-	<name>RCP Example Feature #1</name>
-
+	<modelVersion>4.0.0</modelVersion>
+	
+	<artifactId>mars_taget_platform</artifactId>
+	<packaging>eclipse-target-definition</packaging>
+	<name>RCP Example Target Definition</name>
+	
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
 		<artifactId>parent_smapper</artifactId>
 		<version>1.0.11-SNAPSHOT</version>
 		<relativePath>..</relativePath>
-	</parent>
-
+	</parent>	
 </project>
