--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
 	<version>1.0.11-SNAPSHOT</version>
 	<groupId>com.senatov.smapper</groupId>
@@ -67,13 +68,9 @@
 		</plugins>
 	</build>
 	<modules>
-		
-		
-		
 		<module>com.senatov.smapper.root-files</module>
 		<module>com.senatov.smapper.root-files-win</module>
 		<module>mars_taget_platform</module>
-		
 		<module>com.senatov.smapper.feature</module>
 		<module>com.senatov.smapper.plugin</module>
 	</modules>
