maven ver changed, update tycho model

--- a/com.senatov.smapper.plugin/build.properties
+++ b/com.senatov.smapper.plugin/build.properties
@@ -5,8 +5,7 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                icons/,\
                css/default.css,\
-               images/,\
-               lib/,\
+               images/
                splash.bmp
 source.. = src/main/java,\
            src/test/java,\
