--- a/com.senatov.smapper.plugin/pom.xml
+++ b/com.senatov.smapper.plugin/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
 		<artifactId>parent_smapper</artifactId>
-		<version>1.0.11-SNAPSHOT</version>
+		<version>DEV-SNAPSHOT</version>
 		<relativePath>..</relativePath><!-- disable relativePath lookup, see http://jira.codehaus.org/browse/MNG-5146 -->
 	</parent>
 
@@ -87,4 +87,5 @@
 		</plugins>
 	</reporting>
 	<artifactId>bundle</artifactId>
+<version>1.0.11-SNAPSHOT</version>
 </project>
