--- a/smapper.plugin1/pom.xml
+++ b/smapper.plugin1/pom.xml
@@ -10,7 +10,7 @@
 
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
-		<artifactId>smapper.parent</artifactId>
+		<artifactId>smapper.build</artifactId>
 		<version>1.0.12-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
