--- a/smapper.plugin1/pom.xml
+++ b/smapper.plugin1/pom.xml
@@ -12,6 +12,6 @@
 		<groupId>com.senatov.smapper</groupId>
 		<artifactId>smapper.build</artifactId>
 		<version>1.0.12-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<relativePath>../smapper.build</relativePath>
 	</parent>
 </project>
