--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -6,7 +6,10 @@ bin.includes = META-INF/,\
                icons/,\
                css/default.css,\
                images/,\
-               splash.bmp
+               splash.bmp,\
+               libs/log4j-1.2.16.jar,\
+               libs/slf4j-api-1.6.0.jar,\
+               libs/slf4j-log4j12-1.6.0.jar
 source.. = src/main/java,\
            src/test/java,\
            src/test/resources,\
