--- a/smapper.build/pom.xml
+++ b/smapper.build/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>smapper.build</artifactId>
 	<packaging>pom</packaging>
 	<name>RCP Smapper Parent</name>
-	<version>1.0.12-SNAPSHOT</version>
+	<version>1.1.0</version>
 
 	<prerequisites>
 		<maven>3.3.9</maven>
