--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,17 +1,10 @@
 output.. = target/classes
 bin.includes = META-INF/,\
-               .,\
                plugin.xml,\
                Application.e4xmi,\
                icons/,\
-               css/default.css,\
                images/,\
                splash.bmp,\
-               libs/log4j-1.2.16.jar,\
-               libs/slf4j-api-1.6.0.jar,\
-               libs/slf4j-log4j12-1.6.0.jar
-source.. = src/main/java,\
-           src/test/java,\
-           src/test/resources,\
-           src/main/resources
+               css/,\
+               libs/
                   
