create executable rcp app

--- a/smapper.plugin1/build.properties
+++ b/smapper.plugin1/build.properties
@@ -1,4 +1,4 @@
-output.. = target/classes
+output.. = target
 bin.includes = META-INF/,\
                plugin.xml,\
                Application.e4xmi,\
