--- a/smapper.build/pom.xml
+++ b/smapper.build/pom.xml
@@ -41,7 +41,7 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
+					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
@@ -51,7 +51,7 @@
 					<version>2.6</version>
 				</plugin>
 				<plugin>
-					<groupId>org.eclipse.tycho</groupId>
+					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-p2-repository-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
@@ -92,11 +92,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
+				<groupId>${tycho-groupid}</groupId>
 				<artifactId>tycho-packaging-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
@@ -126,30 +122,25 @@
 					</environments>
 				</configuration>
 			</plugin>
+
 			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-director-plugin</artifactId>
+				<groupId>${tycho-groupid}</groupId>
+				<artifactId>tycho-p2-plugin</artifactId>
 				<version>${tycho-version}</version>
-				<executions>
-					<execution>
-						<!-- install the product using the p2 director -->
-						<id>materialize-products</id>
-						<goals>
-							<goal>materialize-products</goal>
-						</goals>
-					</execution>
-					<execution>
-						<!-- create zip file with the installed product -->
-						<id>archive-products</id>
-						<goals>
-							<goal>archive-products</goal>
-						</goals>
-					</execution>
-				</executions>
+				<configuration>
+				    <encoding>UTF-8</encoding>
+					<baselineMode>warn</baselineMode>
+					<baselineReplace>none</baselineReplace>
+					<baselineRepositories>
+						<repository>
+							<url>http://download.eclipse.org/eclipse/updates/4.2</url>
+						</repository>
+					</baselineRepositories>
+				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
-
 	<modules>
 		<module>../smapper.feature</module>
 		<module>../smapper.plugin1</module>
