--- a/smapper.plugin1/plugin.xml
+++ b/smapper.plugin1/plugin.xml
@@ -30,15 +30,27 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            application="smapper.plugin1.smapper"
-            name="peroduct for smapper">
+            application="org.eclipse.e4.ui.workbench.swt.E4Application"
+            name="Product for smapper">
          <property
                name="appName"
-               value="peroduct for smapper">
+               value="Product for smapper">
          </property>
          <property
                name="applicationCSS"
                value="platform:/plugin/smapper.plugin1/css/default.css">
+         </property>
+         <property
+               name="aboutImage"
+               value="icons/256x256.gif">
+         </property>
+         <property
+               name="aboutText"
+               value="(c) Iakov Senatov">
+         </property>
+         <property
+               name="windowImages"
+               value="icons/16x16.gif,icons/32x32.gif,icons/48x48.gif,icons/64x64.gif,icons/128x128.gif,icons/256x256.gif">
          </property>
       </product>
    </extension>
