--- a/smapper.build/pom.xml
+++ b/smapper.build/pom.xml
@@ -40,6 +40,11 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+		        <plugin>
+		          <groupId>org.eclipse.tycho</groupId>
+		          <artifactId>tycho-p2-director-plugin</artifactId>
+		          <version>${tycho-version}</version>
+		        </plugin>				
 				<plugin>
 					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
@@ -138,6 +143,27 @@
 					</baselineRepositories>
 				</configuration>
 			</plugin>
+			<plugin>
+			  <groupId>org.eclipse.tycho</groupId>
+			  <artifactId>tycho-p2-director-plugin</artifactId>
+			  <executions>
+			    <execution>
+			      <id>create-distributions</id>
+			      <goals>
+			        <goal>materialize-products</goal>
+			        <goal>archive-products</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+			  <configuration>
+			    <directorRuntime>standalone</directorRuntime>
+			    <products>
+			      <product>
+			        <id>smapper.plugin1.product</id>
+			      </product>
+	   	        </products>
+			  </configuration>
+			</plugin>			
 
 		</plugins>
 	</build>
