--- a/smapper.plugin1/pom.xml
+++ b/smapper.plugin1/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
 		<artifactId>smapper.build</artifactId>
-		<version>1.1.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 		<relativePath>../smapper.build</relativePath>
 	</parent>
 </project>
