--- a/smapper.build/pom.xml
+++ b/smapper.build/pom.xml
@@ -41,11 +41,6 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-		        <plugin>
-		          <groupId>org.eclipse.tycho</groupId>
-		          <artifactId>tycho-p2-director-plugin</artifactId>
-		          <version>${tycho-version}</version>
-		        </plugin>				
 				<plugin>
 					<groupId>${tycho-groupid}</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
@@ -64,27 +59,34 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<version>1.4.1</version>
 				<executions>
 					<execution>
-						<id>enforce-java</id>
+						<id>enforce-versions</id>
 						<goals>
 							<goal>enforce</goal>
 						</goals>
 						<configuration>
-							<encoding>UTF-8</encoding>
 							<rules>
+								<requireMavenVersion>
+									<version>3.3.9</version>
+								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>${maven.compiler.target}</version>
+									<version>1.8</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
+
+
 			<plugin>
 				<groupId>${tycho-groupid}</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
@@ -107,9 +109,10 @@
 						<addMavenDescriptor>true</addMavenDescriptor>
 					</archive>
 					<sourceReferences>
-						<generate>true</generate>
-						<customValue>scm:myscm:customSourceReferenceValue</customValue>
+						<generate>false</generate>
 					</sourceReferences>
+					<strictBinIncludes>false</strictBinIncludes>
+					<useDefaultExcludes>true</useDefaultExcludes>
 				</configuration>
 			</plugin>
 
@@ -134,42 +137,20 @@
 				<artifactId>tycho-p2-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-				    <encoding>UTF-8</encoding>
+					<encoding>UTF-8</encoding>
 					<baselineMode>warn</baselineMode>
 					<baselineReplace>none</baselineReplace>
 					<baselineRepositories>
 						<repository>
-							<url>http://download.eclipse.org/eclipse/updates/4.2</url>
+							<url>http://download.eclipse.org/eclipse/updates/4.6milestones</url>
 						</repository>
 					</baselineRepositories>
 				</configuration>
 			</plugin>
-			<plugin>
-			  <groupId>org.eclipse.tycho</groupId>
-			  <artifactId>tycho-p2-director-plugin</artifactId>
-			  <executions>
-			    <execution>
-			      <id>create-distributions</id>
-			      <goals>
-			        <goal>materialize-products</goal>
-			        <goal>archive-products</goal>
-			      </goals>
-			    </execution>
-			  </executions>
-			  <configuration>
-			    <directorRuntime>standalone</directorRuntime>
-			    <products>
-			      <product>
-			        <id>smapper.product</id>
-			      </product>
-	   	        </products>
-			  </configuration>
-			</plugin>			
 		</plugins>
 	</build>
 	<modules>
 		<module>../smapper.feature</module>
 		<module>../smapper.plugin1</module>
-		<module>../smapper.product</module>
 	</modules>
 </project>
