--- a/smapper.product/pom.xml
+++ b/smapper.product/pom.xml
@@ -6,8 +6,6 @@
 	<artifactId>smapper.product</artifactId>
 	<packaging>eclipse-repository</packaging>
 
-
-
 	<parent>
 		<groupId>com.senatov.smapper</groupId>
 		<artifactId>smapper.build</artifactId>
@@ -21,6 +19,7 @@
 			<plugin>
 				<groupId>org.eclipse.tycho.extras</groupId>
 				<artifactId>tycho-p2-extras-plugin</artifactId>
+				<version>${tycho-version}</version>
 				<executions>
 					<execution>
 						<id>mirror-to-central-epp-repository</id>
@@ -36,23 +35,31 @@
 							</source>
 							<destination>${eclipse.epp.targetRepository}</destination>
 							<followOnlyFilteredRequirements>true</followOnlyFilteredRequirements>
-							<includeOptional>true</includeOptional>
-							<includeNonGreedy>true</includeNonGreedy>
+							<includeOptional>false</includeOptional>
+							<includeNonGreedy>false</includeNonGreedy>
 							<includePacked>true</includePacked>
 							<append>true</append>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-p2-director-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>materialize-products</id>
+						<goals>
+							<goal>materialize-products</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
+
 	<profiles>
 		<profile>
 			<id>eclipse-sign-windows</id>
@@ -61,7 +68,7 @@
 					<plugin>
 						<groupId>org.eclipse.cbi.maven.plugins</groupId>
 						<artifactId>eclipse-winsigner-plugin</artifactId>
-						<version>${cbi.version}</version>
+						<version>${tycho-version}</version>
 						<executions>
 							<execution>
 								<id>sign</id>
